Fix flex layout problem on Android 4.4

--- a/src/core/core.less
+++ b/src/core/core.less
@@ -117,18 +117,30 @@
 
   .vc-topbar {
     background-color: #FBF9FE;
-    display: flex;
     display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -moz-box-orient: horizontal;
+    -moz-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex-wrap: wrap;
-    -webkit-box-direction: row;
     -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     width: 100%;
 
     .vc-toptab {
       display: none;
-      flex: 1;
       -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
       line-height: 30em / @font;
       padding: 0 15em / @font;
       border-bottom: 1px solid #D9D9D9;
@@ -425,12 +437,21 @@
     .vc-table {
 
       .vc-table-row {
-        display: flex;
+        display: -webkit-box;
         display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+        -moz-box-orient: horizontal;
+        -moz-box-direction: normal;
+        -ms-flex-direction: row;
         flex-direction: row;
-        flex-wrap: wrap;
-        -webkit-box-direction: row;
         -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
         overflow: hidden;
         border-bottom: 1px solid #EEE;
       }
@@ -439,8 +460,11 @@
       }
 
       .vc-table-col {
-        flex: 1;
         -webkit-box-flex: 1;
+        -webkit-flex: 1;
+        -moz-box-flex: 1;
+        -ms-flex: 1;
+        flex: 1;
         padding: 3em / @font 4em / @font;
         border-left: 1px solid #EEE;
         overflow: auto;
@@ -459,11 +483,41 @@
         font-size: 12em / @font;
       }
 
-      .vc-table-col-2 { flex: 2; -webkit-box-flex: 2; }
-      .vc-table-col-3 { flex: 3; -webkit-box-flex: 3; }
-      .vc-table-col-4 { flex: 4; -webkit-box-flex: 4; }
-      .vc-table-col-5 { flex: 5; -webkit-box-flex: 5; }
-      .vc-table-col-6 { flex: 6; -webkit-box-flex: 6; }
+      .vc-table-col-2 {
+        -webkit-box-flex: 2;
+        -webkit-flex: 2;
+        -moz-box-flex: 2;
+        -ms-flex: 2;
+        flex: 2;
+      }
+      .vc-table-col-3 {
+        -webkit-box-flex: 3;
+        -webkit-flex: 3;
+        -moz-box-flex: 3;
+        -ms-flex: 3;
+        flex: 3;
+      }
+      .vc-table-col-4 {
+        -webkit-box-flex: 4;
+        -webkit-flex: 4;
+        -moz-box-flex: 4;
+        -ms-flex: 4;
+        flex: 4;
+      }
+      .vc-table-col-5 {
+        -webkit-box-flex: 5;
+        -webkit-flex: 5;
+        -moz-box-flex: 5;
+        -ms-flex: 5;
+        flex: 5;
+      }
+      .vc-table-col-6 {
+        -webkit-box-flex: 6;
+        -webkit-flex: 6;
+        -moz-box-flex: 6;
+        -ms-flex: 6;
+        flex: 6;
+      }
 
       .vc-table-row-error {
         border-color: #F4A0AB;
@@ -493,18 +547,29 @@
     left: 0;
     right: 0;
     bottom: 0;
-    display: flex;
     display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -moz-box-orient: horizontal;
+    -moz-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-box-direction: row;
 
     .vc-tool {
       display: none;
       text-decoration: none;
       color: #000;
       width: 50%;
-      flex: 1;
       -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -moz-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
       text-align: center;
       position: relative;
       -webkit-touch-callout: none;
